--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.307",
+    "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
+    "react-typing-effect": "^2.0.5",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
